Remove provided dependency and adapt tests
Common-IO is used by tika-lib and was only used in tests by us.